# cpakt

./: .editorconfig  CMakeLists.txt  LICENSE.txt  README.md  README.rst
include/cpakt/: cpakt-asserts-state.h  cpakt-asserts.h  cpakt-assertz.h  cpakt-defs.h  cpakt-formatter.h  cpakt-impl.h  cpakt-magic.h  cpakt-main.h  cpakt.h
include/cpakt/impl/: cpakt-impl-all-and-everything.c.h  cpakt-impl-asserts.c.h  cpakt-impl-asserts.h  cpakt-impl-defs.h  cpakt-impl-run-registry.c.h  cpakt-impl-utils.c.h  cpakt-impl-utils.h  cpakt-magic.h
sphinx/: index.rst
sphinx/doc/: first-example.rst
src/: cpakt.c
test/: test1.c
